--- a/po/nl.po
+++ b/po/nl.po
@@ -1,15 +1,14 @@
-# translation of gst-plugins-bad-1.4.0.nl.po to Dutch
 # translation of gst-plugins-bad to Dutch
 # Copyright (C) 2004, 2007, 2008, 2009 Free Software Foundation, Inc.
 #
 # This file is distributed under the same license as the gst-plugins-bad package.
-# Freek de Kruijf <f.de.kruijf@gmail.com>, 2007, 2008, 2009, 2011, 2013, 2014.
+# Freek de Kruijf <f.de.kruijf@gmail.com>, 2007, 2008, 2009, 2011, 2013, 2014, 2015.
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-bad 1.4.0\n"
+"Project-Id-Version: gst-plugins-bad 1.6.0\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2015-09-25 22:59+0200\n"
-"PO-Revision-Date: 2014-07-22 10:49+0200\n"
+"POT-Creation-Date: 2015-10-30 14:30+0200\n"
+"PO-Revision-Date: 2015-10-17 12:35+0200\n"
 "Last-Translator: Freek de Kruijf <f.de.kruijf@gmail.com>\n"
 "Language-Team: Dutch <vertaling@vrijschrift.org>\n"
 "Language: nl\n"
@@ -23,80 +22,94 @@ msgid "format wasn't negotiated before get function"
 msgstr "formaat is niet onderhandeld vóór get-functie"
 
 msgid "default GStreamer sound events audiosink"
-msgstr ""
+msgstr "standaard GStreamer audiosink voor geluidsgebeurtenissen"
 
 msgid ""
 "GStreamer can play audio using any number of output elements. Some possible "
 "choices are osssink, pulsesink and alsasink. The audiosink can be a partial "
 "pipeline instead of just one element."
 msgstr ""
+"GStreamer kan geluid afspelen met elk aantal uitvoerelementen. Enige "
+"mogelijke keuzes zijn osssink, pulsesink en alsasink. De audiosink kan een "
+"gedeeltelijke pipeline zijn in plaats van gewoon één element."
 
 msgid "description for default GStreamer sound events audiosink"
 msgstr ""
+"beschrijving van standaard GStreamer audiosink voor geluidsgebeurtenissen"
 
 msgid "Describes the selected audiosink element."
-msgstr ""
+msgstr "Beschrijft het geselecteerde audiosink-element."
 
 msgid "default GStreamer audiosink for Audio/Video Conferencing"
-msgstr ""
+msgstr "standaard GStreamer audiosink voor audio/videoconferenties"
 
 msgid ""
 "description for default GStreamer audiosink for Audio/Video Conferencing"
 msgstr ""
+"beschrijving van standaard GStreamer audiosink voor audio/videoconferenties"
 
 msgid "default GStreamer audiosink for Music and Movies"
-msgstr ""
+msgstr "standaard GStreamer audiosink voor muziek en film"
 
 msgid "description for default GStreamer audiosink for Music and Movies"
-msgstr ""
+msgstr "beschrijving van standaard GStreamer audiosink voor muziek en film"
 
 msgid "default GStreamer videosink"
-msgstr ""
+msgstr "standaard GStreamer videosink"
 
 msgid ""
 "GStreamer can play video using any number of output elements. Some possible "
 "choices are xvimagesink, ximagesink, sdlvideosink and aasink. The videosink "
 "can be a partial pipeline instead of just one element."
 msgstr ""
+"GStreamer kan video afspelen met elk aantal uitvoerelementen Enige mogelijke "
+"keuzes zijn xvimagesink, ximagesink, sdlvideosink en aasink. De videosink "
+"kan een gedeeltelijke pipeline zijn in plaats van gewoon één element."
 
 msgid "description for default GStreamer videosink"
-msgstr ""
+msgstr "beschrijving van standaard GStreamer videosink"
 
 msgid "Describes the selected videosink element."
-msgstr ""
+msgstr "Beschrijft het geselecteerde videosink-element."
 
 msgid "default GStreamer audiosrc"
-msgstr ""
+msgstr "standaard GStreamer audiobron"
 
 msgid ""
 "GStreamer can record audio using any number of input elements. Some possible "
 "choices are osssrc, pulsesrc and alsasrc. The audio source can be a partial "
 "pipeline instead of just one element."
 msgstr ""
+"GStreamer kan geluid opnemen met elk aantal invoerelementen. Enige mogelijke "
+"keuzes zijn osssrc, pulsesrc en alsasrc. De audiobron kan een gedeeltelijke "
+"pipeline zijn in plaats van gewoon één element."
 
 msgid "description for default GStreamer audiosrc"
-msgstr ""
+msgstr "beschrijving van standaard GStreamer audiobron"
 
 msgid "Describes the selected audiosrc element."
-msgstr ""
+msgstr "Beschrijft het geselecteerde audiobron-element."
 
 msgid "default GStreamer videosrc"
-msgstr ""
+msgstr "standaard GStreamer videobron"
 
 msgid ""
 "GStreamer can record video from any number of input elements. Some possible "
 "choices are v4lsrc, v4l2src and videotestsrc. The video source can be a "
 "partial pipeline instead of just one element."
 msgstr ""
+"GStreamer kan video opnemen met elk aantal invoerelementen. Enige mogelijke "
+"keuzes zijn v4lsrc, v4l2src en videotestsrc. De videobron kan een "
+"gedeeltelijke pipeline zijn in plaats van gewoon één element."
 
 msgid "description for default GStreamer videosrc"
-msgstr ""
+msgstr "beschrijving van standaard GStreamer videobron"
 
 msgid "Describes the selected videosrc element."
-msgstr ""
+msgstr "Beschrijft het geselecteerde videobron-element."
 
 msgid "default GStreamer visualization"
-msgstr ""
+msgstr "standaard GStreamer visualisatie"
 
 msgid ""
 "GStreamer can put visualization plugins in a pipeline to transform audio "
@@ -104,15 +117,19 @@ msgid ""
 "synaesthesia. The visualization plugin can be a partial pipeline instead of "
 "just one element."
 msgstr ""
+"GStreamer kan visualisatieplug-ins in een pipeline stoppen om audiostreams "
+"te transformeren in videoframes. Enige mogelijke keuzes zijn goom, goom2k1 "
+"en synaesthesia. De visualisatieplug-in kan een gedeeltelijke pipeline zijn "
+"in plaats van gewoon één element."
 
 msgid "description for default GStreamer visualization"
-msgstr ""
+msgstr "beschrijving van standaard GStreamer visualisatie"
 
 msgid "Describes the selected visualization element."
-msgstr ""
+msgstr "Beschrijft het geselecteerde visualisatie-element."
 
 msgid "OpenCV failed to load template image"
-msgstr ""
+msgstr "OpenCV kon sjabloonafbeelding niet laden"
 
 msgid "Could not read title information for DVD."
 msgstr "Kan de titelinformatie voor de DVD niet lezen."
@@ -169,7 +186,7 @@ msgstr ""
 "Locatie van bestand is op NUL gezet, stel het in op een geldige bestandsnaam"
 
 msgid "Digitalzoom element couldn't be created"
-msgstr ""
+msgstr "Digitalzoom-element kon niet gemaakt worden"
 
 msgid "Subpicture format was not configured before data flow"
 msgstr ""
