--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,20 +4,20 @@
 # Wenzheng Hu <db_lobster@163.com>, 2007.
 # LI Daobing <lidaobing@gmail.com>, 2008.
 # Ji ZhengYu <zhengyuji@gmail.com>, 2008, 2009.
-# zwpwjwtz <zwpwjwtz@126.com>, 2015.
+# Tianze Wang <zwpwjwtz@126.com>, 2015.
 msgid ""
 msgstr ""
-"Project-Id-Version: gst-plugins-bad 1.5.1\n"
+"Project-Id-Version: gst-plugins-bad 1.6.0\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2015-09-25 22:59+0200\n"
-"PO-Revision-Date: 2015-09-05 21:03+0800\n"
-"Last-Translator: zwpwjwtz <zwpwjwtz@126.com>\n"
+"POT-Creation-Date: 2015-10-30 14:30+0200\n"
+"PO-Revision-Date: 2015-10-16 19:27+0800\n"
+"Last-Translator: Tianze Wang <zwpwjwtz@126.com>\n"
 "Language-Team: Chinese (simplified) <i18n-zh@googlegroups.com>\n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.4\n"
+"X-Generator: Poedit 1.8.5\n"
 
 msgid "format wasn't negotiated before get function"
 msgstr "在调用get函数之前未确定合适的格式"
@@ -175,7 +175,6 @@ msgstr "缺少“%s”组件 - 请检查你的GStreamer安装。"
 msgid "File location is set to NULL, please set it to a valid filename"
 msgstr "文件位置为NULL，请将其设置为有效的文件名"
 
-#, fuzzy
 msgid "Digitalzoom element couldn't be created"
 msgstr "无法创建Digitalzoom组件"
 
